// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PropertyDetails Snapshots should match snapshot when user is property owner 1`] = `
<div>
  <h1
    class="text-xl"
  >
    Luxury Downtown Apartment
     in 
    Downtown
  </h1>
  <p
    class="text-sm mb-4"
  >
    2
     beds
    <span
      class="text-[10px]"
    >
       • 
    </span>
    2
     baths
    <span
      class="text-[10px]"
    >
       • 
    </span>
    1200
     square feet
  </p>
  <p
    class="mb-4"
  >
    A beautiful downtown apartment with stunning city views and modern amenities.
  </p>
  <div
    class="mb-4 pb-4 border-b border-gray-200"
  >
    <h1
      class="text-lg"
    >
      You own this property
    </h1>
  </div>
  <div
    class="pb-4 mb-4 border-b border-gray-200"
  >
    <h3>
      Amenities
    </h3>
    <ul
      class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 text-xs list-none"
    >
      <li
        class="mt-2"
      >
        <div
          class="inline-block text-green-600 mr-2 mb-2"
          data-testid="fa-check-icon"
        />
        <span>
          WiFi
        </span>
      </li>
      <li
        class="mt-2"
      >
        <div
          class="inline-block text-green-600 mr-2 mb-2"
          data-testid="fa-check-icon"
        />
        <span>
          Kitchen
        </span>
      </li>
      <li
        class="mt-2"
      >
        <div
          class="inline-block text-green-600 mr-2 mb-2"
          data-testid="fa-check-icon"
        />
        <span>
          Parking
        </span>
      </li>
      <li
        class="mt-2"
      >
        <div
          class="inline-block text-green-600 mr-2 mb-2"
          data-testid="fa-check-icon"
        />
        <span>
          Pool
        </span>
      </li>
      <li
        class="mt-2"
      >
        <div
          class="inline-block text-green-600 mr-2 mb-2"
          data-testid="fa-check-icon"
        />
        <span>
          Gym
        </span>
      </li>
    </ul>
  </div>
  <div
    class="pb-4 mb-6 border-b border-gray-200"
  >
    <h3
      class="mb-2"
    >
      Rates
    </h3>
    <div
      class="flex flex-col md:flex-row justify-start items-start"
    >
      <div
        class="flex items-center justify-center mb-2 md:pb-0 md:mr-4"
      >
        <div
          class="mr-1 text-sm"
        >
          $150
        </div>
        <div
          class="text-gray-500 text-xs"
        >
          nightly
        </div>
      </div>
      <div
        class="flex items-center justify-center mb-2 md:pb-0 md:mr-4"
      >
        <div
          class="mr-1 text-sm"
        >
          $900
        </div>
        <div
          class="text-gray-500 text-xs"
        >
          weekly
        </div>
      </div>
      <div
        class="flex items-center justify-center mb-2 md:pb-0"
      >
        <div
          class="mr-1 text-sm"
        >
          $3,500
        </div>
        <div
          class="text-gray-500 text-xs"
        >
          monthly
        </div>
      </div>
    </div>
  </div>
  <div
    class="bg-white p-4 rounded-md shadow-md"
  >
    <div
      data-property-id="507f1f77bcf86cd799439011"
      data-testid="property-map"
      data-viewport-width="1024"
    >
      PropertyMap Component
    </div>
  </div>
</div>
`;

exports[`PropertyDetails Snapshots should match snapshot with default property 1`] = `
<div>
  <h1
    class="text-xl"
  >
    Luxury Downtown Apartment
     in 
    Downtown
  </h1>
  <p
    class="text-sm mb-4"
  >
    2
     beds
    <span
      class="text-[10px]"
    >
       • 
    </span>
    2
     baths
    <span
      class="text-[10px]"
    >
       • 
    </span>
    1200
     square feet
  </p>
  <p
    class="mb-4"
  >
    A beautiful downtown apartment with stunning city views and modern amenities.
  </p>
  <div
    class="mb-4 pb-4 border-b border-gray-200"
  >
    <h1
      class="text-lg"
    >
      Hosted by John Seller
    </h1>
    <p
      class="text-sm"
    >
      seller@example.com
      <span
        class="text-[10px]"
      >
         • 
      </span>
      (555) 123-4567
    </p>
  </div>
  <div
    class="pb-4 mb-4 border-b border-gray-200"
  >
    <h3>
      Amenities
    </h3>
    <ul
      class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 text-xs list-none"
    >
      <li
        class="mt-2"
      >
        <div
          class="inline-block text-green-600 mr-2 mb-2"
          data-testid="fa-check-icon"
        />
        <span>
          WiFi
        </span>
      </li>
      <li
        class="mt-2"
      >
        <div
          class="inline-block text-green-600 mr-2 mb-2"
          data-testid="fa-check-icon"
        />
        <span>
          Kitchen
        </span>
      </li>
      <li
        class="mt-2"
      >
        <div
          class="inline-block text-green-600 mr-2 mb-2"
          data-testid="fa-check-icon"
        />
        <span>
          Parking
        </span>
      </li>
      <li
        class="mt-2"
      >
        <div
          class="inline-block text-green-600 mr-2 mb-2"
          data-testid="fa-check-icon"
        />
        <span>
          Pool
        </span>
      </li>
      <li
        class="mt-2"
      >
        <div
          class="inline-block text-green-600 mr-2 mb-2"
          data-testid="fa-check-icon"
        />
        <span>
          Gym
        </span>
      </li>
    </ul>
  </div>
  <div
    class="pb-4 mb-6 border-b border-gray-200"
  >
    <h3
      class="mb-2"
    >
      Rates
    </h3>
    <div
      class="flex flex-col md:flex-row justify-start items-start"
    >
      <div
        class="flex items-center justify-center mb-2 md:pb-0 md:mr-4"
      >
        <div
          class="mr-1 text-sm"
        >
          $150
        </div>
        <div
          class="text-gray-500 text-xs"
        >
          nightly
        </div>
      </div>
      <div
        class="flex items-center justify-center mb-2 md:pb-0 md:mr-4"
      >
        <div
          class="mr-1 text-sm"
        >
          $900
        </div>
        <div
          class="text-gray-500 text-xs"
        >
          weekly
        </div>
      </div>
      <div
        class="flex items-center justify-center mb-2 md:pb-0"
      >
        <div
          class="mr-1 text-sm"
        >
          $3,500
        </div>
        <div
          class="text-gray-500 text-xs"
        >
          monthly
        </div>
      </div>
    </div>
  </div>
  <div
    class="bg-white p-4 rounded-md shadow-md"
  >
    <div
      data-property-id="507f1f77bcf86cd799439011"
      data-testid="property-map"
      data-viewport-width="1024"
    >
      PropertyMap Component
    </div>
  </div>
</div>
`;

exports[`PropertyDetails Snapshots should match snapshot with minimal rates 1`] = `
<div>
  <h1
    class="text-xl"
  >
    Luxury Downtown Apartment
     in 
    Downtown
  </h1>
  <p
    class="text-sm mb-4"
  >
    2
     beds
    <span
      class="text-[10px]"
    >
       • 
    </span>
    2
     baths
    <span
      class="text-[10px]"
    >
       • 
    </span>
    1200
     square feet
  </p>
  <p
    class="mb-4"
  >
    A beautiful downtown apartment with stunning city views and modern amenities.
  </p>
  <div
    class="mb-4 pb-4 border-b border-gray-200"
  >
    <h1
      class="text-lg"
    >
      Hosted by John Seller
    </h1>
    <p
      class="text-sm"
    >
      seller@example.com
      <span
        class="text-[10px]"
      >
         • 
      </span>
      (555) 123-4567
    </p>
  </div>
  <div
    class="pb-4 mb-4 border-b border-gray-200"
  >
    <h3>
      Amenities
    </h3>
    <ul
      class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 text-xs list-none"
    >
      <li
        class="mt-2"
      >
        <div
          class="inline-block text-green-600 mr-2 mb-2"
          data-testid="fa-check-icon"
        />
        <span>
          WiFi
        </span>
      </li>
      <li
        class="mt-2"
      >
        <div
          class="inline-block text-green-600 mr-2 mb-2"
          data-testid="fa-check-icon"
        />
        <span>
          Kitchen
        </span>
      </li>
      <li
        class="mt-2"
      >
        <div
          class="inline-block text-green-600 mr-2 mb-2"
          data-testid="fa-check-icon"
        />
        <span>
          Parking
        </span>
      </li>
      <li
        class="mt-2"
      >
        <div
          class="inline-block text-green-600 mr-2 mb-2"
          data-testid="fa-check-icon"
        />
        <span>
          Pool
        </span>
      </li>
      <li
        class="mt-2"
      >
        <div
          class="inline-block text-green-600 mr-2 mb-2"
          data-testid="fa-check-icon"
        />
        <span>
          Gym
        </span>
      </li>
    </ul>
  </div>
  <div
    class="pb-4 mb-6 border-b border-gray-200"
  >
    <h3
      class="mb-2"
    >
      Rates
    </h3>
    <div
      class="flex flex-col md:flex-row justify-start items-start"
    >
      <div
        class="flex items-center justify-center mb-2 md:pb-0 md:mr-4"
      >
        <div
          class="mr-1 text-sm"
        >
          $100
        </div>
        <div
          class="text-gray-500 text-xs"
        >
          nightly
        </div>
      </div>
    </div>
  </div>
  <div
    class="bg-white p-4 rounded-md shadow-md"
  >
    <div
      data-property-id="507f1f77bcf86cd799439011"
      data-testid="property-map"
      data-viewport-width="1024"
    >
      PropertyMap Component
    </div>
  </div>
</div>
`;

exports[`PropertyDetails Snapshots should match snapshot with no amenities 1`] = `
<div>
  <h1
    class="text-xl"
  >
    Luxury Downtown Apartment
     in 
    Downtown
  </h1>
  <p
    class="text-sm mb-4"
  >
    2
     beds
    <span
      class="text-[10px]"
    >
       • 
    </span>
    2
     baths
    <span
      class="text-[10px]"
    >
       • 
    </span>
    1200
     square feet
  </p>
  <p
    class="mb-4"
  >
    A beautiful downtown apartment with stunning city views and modern amenities.
  </p>
  <div
    class="mb-4 pb-4 border-b border-gray-200"
  >
    <h1
      class="text-lg"
    >
      Hosted by John Seller
    </h1>
    <p
      class="text-sm"
    >
      seller@example.com
      <span
        class="text-[10px]"
      >
         • 
      </span>
      (555) 123-4567
    </p>
  </div>
  <div
    class="pb-4 mb-4 border-b border-gray-200"
  >
    <h3>
      Amenities
    </h3>
    <ul
      class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 text-xs list-none"
    />
  </div>
  <div
    class="pb-4 mb-6 border-b border-gray-200"
  >
    <h3
      class="mb-2"
    >
      Rates
    </h3>
    <div
      class="flex flex-col md:flex-row justify-start items-start"
    >
      <div
        class="flex items-center justify-center mb-2 md:pb-0 md:mr-4"
      >
        <div
          class="mr-1 text-sm"
        >
          $150
        </div>
        <div
          class="text-gray-500 text-xs"
        >
          nightly
        </div>
      </div>
      <div
        class="flex items-center justify-center mb-2 md:pb-0 md:mr-4"
      >
        <div
          class="mr-1 text-sm"
        >
          $900
        </div>
        <div
          class="text-gray-500 text-xs"
        >
          weekly
        </div>
      </div>
      <div
        class="flex items-center justify-center mb-2 md:pb-0"
      >
        <div
          class="mr-1 text-sm"
        >
          $3,500
        </div>
        <div
          class="text-gray-500 text-xs"
        >
          monthly
        </div>
      </div>
    </div>
  </div>
  <div
    class="bg-white p-4 rounded-md shadow-md"
  >
    <div
      data-property-id="507f1f77bcf86cd799439011"
      data-testid="property-map"
      data-viewport-width="1024"
    >
      PropertyMap Component
    </div>
  </div>
</div>
`;
